Added menu and setup for first level

--- a/ebf.html
+++ b/ebf.html
@@ -2,21 +2,11 @@
 <html>
 <head>
     <script src="http://code.createjs.com/easeljs-0.7.0.min.js"></script>
-    <script>
-        function init() {
-           var stage = new createjs.Stage("demoCanvas");
-		   var circle = new createjs.Shape();
-			circle.graphics.beginFill("red").drawCircle(0, 0, 50);
-			circle.x = 100;
-			circle.y = 100;
-			stage.addChild(circle);
-			stage.update();
-			stage.clear();
-        }
-    </script>
+    <script src="ebf.js"> </script>
+	
 </head>
 <body onload="init();">
-    <canvas id="demoCanvas" width="500" height="300">
+    <canvas id="demoCanvas" width="1000" height="600" style="border:1px solid #000000;">
         alternate content
     </canvas>
 </body>
